--- a/slides/slides_ch3.Rmd
+++ b/slides/slides_ch3.Rmd
@@ -23,9 +23,9 @@ output:
 
 -   Review of lab 1
 
--   What is the tidyverse?
+-   Tidy data
 
--   Why the pipe
+-   The pipe
 
 ```{r echo=FALSE, warning=FALSE, message=FALSE}
 library(tidyverse)
