--- a/files/assignments/info6270_lab9.Rmd
+++ b/files/assignments/info6270_lab9.Rmd
@@ -1,17 +1,3 @@
----
-title: "INFO6270 Lab 9"
-author: "Philippe Mongeon" # Replace my name with yours
-date: "2022-03-10" # Put the date here
-output: 
-  html_document:
-    toc: true 
-    toc_float:       
-      collapsed: false
-    toc_depth: 2
-    number_sections: true 
-    theme: default
----
-
 # Introduction
 
 In this lab you will build a logistic regression model that predicts a categorical variable based on other variables in your dataset.
@@ -37,8 +23,10 @@ For this lab, you can use a dataset of your choice. The criteria are:
 
 #### Load your dataset
 
+Make sure to use the name "data" for your dataset, so that some codes below will work without requiring changes. 
+
 ```{r message=FALSE, warning=FALSE}
-abstracts <- read_tsv("https://pmongeon.github.io/info6270/files/abstracts.txt")
+data <- Insert code to read data here
 ```
 
 #### Tidy your dataset
